testcases/error/invalid_for_step.veryl
module invalid_for_step {
    var a: logic<32>;
    always_comb {
        a = 0;
        for i in 0..10 step *= 2 {
            a += i;
        }
    }
}
